cluster/apps/hajimari/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hajimari
  namespace: hajimari
  labels:
    app: hajimari
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.zzd.ai/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.zzd.ai/oauth2/start?rd=https://$host$uri"

spec:
  tls:
    - hosts:
        - hj.zzd.ai
      secretName: my-certs-hajimari
  rules:
    - host: hj.zzd.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hajimari
                port:
                  number: 8000
